fix: items horizontal spacing on order details modal

--- a/src/app/components/modal/styles.module.scss
+++ b/src/app/components/modal/styles.module.scss
@@ -74,7 +74,7 @@ $transition-duration: 0.3s;
 .itemsContainer {
   background-color: var(--dark-700);
   border-radius: $border-radius;
-  padding: 16px;
+  padding: 8px 0;
   margin-bottom: 24px;
   box-shadow: 0 2px 4px var(--black), 0.1;
 
